<resources>

    <!-- LoginPage &  RegisterPage -->
    <string name="app_name">美食wiki</string>
    <string name="hint_login_username">用户名</string>
    <string name="hint_input_password">密码</string>
    <string name="hint_register_phoneNumber">手机号</string>
    <string name="hint_register_email">邮箱</string>
    <string name="hint_register_confirmCode">验证码</string>
    <string name="hint_register_password">密码</string>
    <string name="hint_register_confirmPassword">确认密码</string>
    <string name="digits_password">？？？</string>
    <string name="remember_password">记住密码</string>
    <string name="button_forget_password">忘记密码</string>
    <string name="button_get_confirmCode">获取验证码</string>
    <string name="button_phone_register">手机注册</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="button_goto_register">立即注册</string>
    <string name="button_goto_login">立即登录</string>
    <string name="label_third_part_login">第三方登录</string>
    <string name="label_third_part_register">第三方注册</string>

    <!-- HomePage -->
    <string name="username">半杯咖啡享一世</string>
      <string name="brand">\@殿堂级美食鉴赏家</string>
      <string name="self_intro">这世间，唯爱与美食不可辜负（关注我了解更多本地美食）</string>
      <string name="my_star">我的收藏</string>
      <string name="my_fav">我的点赞</string>
      <string name="my_comment">回复我的</string>
      <string name="my_follow">我的关注</string>
      <string name="follow">关注</string>
      <string name="follower">关注者</string>
      <string name="reader">阅读数</string>

    <!-- SettingPage -->
    <string name="item_1">昵称</string>
    <string name="item_1_default">尚未填写昵称</string>
    <string name="item_2">个性签名</string>
    <string name="item_2_default">这家伙很懒，什么都没写~</string>
    <string name="button_save">保存修改</string>

    <!-- PublishPage -->
    <string name="item2_1">美食名称</string>
    <string name="item2_1_default">请输入美食名称</string>
    <string name="item2_2">内容详情</string>
    <string name="item2_2_default">请输入内容详情</string>
    <string name="item2_3">个人点评</string>
    <string name="item2_3_default">请输入个人点评</string>
    <string name="item2_4">联系方式</string>
    <string name="item2_4_default">请输入联系方式</string>
    <string name="button_publish">发布美食</string>
  </resources>
