<?xml version="1.0" encoding="utf-8"?>


<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_login_background">

        <ImageView
            android:id="@+id/iv_space"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="@dimen/setting_margin_bottom"
            android:layout_marginRight="8.0dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llyt_setting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginBottom="@dimen/form_margin_top"
            android:layout_marginRight="28.0dip"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_space">


            <TextView
                android:id="@+id/tv_petname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/item_1">
            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_petname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/item_1_default"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_transparent" />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/tv_descripiton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/item_2">
            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_descripiton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/item_2_default"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_transparent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="120dp"
            android:background="@drawable/shape_rect"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="@id/llyt_setting"
            app:layout_constraintTop_toBottomOf="@id/llyt_setting" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

