<?xml version="1.0" encoding="utf-8"?>


<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_login_background">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:layout_marginRight="8.0dip"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llyt_form"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginTop="@dimen/form_margin_top"
            android:layout_marginRight="28.0dip"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_phoneNumber"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/hint_register_phoneNumber"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/input_layout_email"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/hint_register_email"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_confirmCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/selector_password_visibility"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#50ffffff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmCode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/hint_register_confirmCode"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/selector_password_visibility"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#50ffffff"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/hint_register_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/selector_password_visibility"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#50ffffff"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8.0dip"
                    android:hint="@string/hint_register_confirmPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_confirmCode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8.0dip"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_get_confirmCode"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/hint_text"
            app:layout_constraintRight_toRightOf="@id/llyt_form"
            app:layout_constraintTop_toBottomOf="@id/llyt_form" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_phone_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8.0dip"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_phone_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/hint_text"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="@id/llyt_form"
            app:layout_constraintTop_toBottomOf="@id/llyt_form" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="4dp"
            android:background="@drawable/shape_round_rect"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"

            app:layout_constraintLeft_toLeftOf="@id/llyt_form"
            app:layout_constraintRight_toRightOf="@id/llyt_form"
            app:layout_constraintTop_toBottomOf="@id/btn_get_confirmCode" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_email"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="4dp"
            android:background="@drawable/shape_round_rect"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/llyt_form"
            app:layout_constraintRight_toRightOf="@id/llyt_form"
            app:layout_constraintTop_toBottomOf="@id/btn_phone_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_to_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="8.0dip"
            android:minHeight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/button_goto_login"
            android:textColor="@color/hint_text"
            app:layout_constraintLeft_toLeftOf="@id/btn_register"
            app:layout_constraintRight_toRightOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <TextView
            android:id="@+id/tv_third_part_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="16.0dip"
            android:layout_marginRight="0.0dip"
            android:padding="8.0dip"
            android:text="@string/label_third_part_register"
            android:textColor="@color/hint_text"
            app:layout_constraintLeft_toLeftOf="@id/btn_to_login"
            app:layout_constraintRight_toRightOf="@id/btn_to_login"
            app:layout_constraintTop_toBottomOf="@id/btn_to_login" />

        <View
            android:id="@+id/view"
            android:layout_width="0.0dip"
            android:layout_height="1.0dip"
            android:layout_marginTop="0.0dip"
            android:layout_marginBottom="0.0dip"
            android:background="@color/hint_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_third_part_login_label"
            app:layout_constraintLeft_toLeftOf="@id/btn_register"
            app:layout_constraintRight_toLeftOf="@id/tv_third_part_login_label"
            app:layout_constraintTop_toTopOf="@id/tv_third_part_login_label"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="1.0dip"
            android:layout_marginTop="0.0dip"
            android:layout_marginBottom="0.0dip"
            android:background="@color/hint_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_third_part_login_label"
            app:layout_constraintLeft_toRightOf="@id/tv_third_part_login_label"
            app:layout_constraintRight_toRightOf="@id/btn_register"
            app:layout_constraintTop_toTopOf="@id/tv_third_part_login_label"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_third_part_login_label">

            <ImageButton
                android:id="@+id/ibtn_email_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:minWidth="50.0dip"
                android:minHeight="50.0dip"
                app:srcCompat="@drawable/ic_email_login" />

            <android.widget.Space
                android:layout_width="20.0dip"
                android:layout_height="fill_parent" />

            <ImageButton
                android:id="@+id/ibtn_wechat_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:minWidth="50.0dip"
                android:minHeight="50.0dip"
                app:srcCompat="@drawable/ic_wechat_login" />

            <android.widget.Space
                android:layout_width="20.0dip"
                android:layout_height="fill_parent" />

            <ImageButton
                android:id="@+id/ibtn_qq_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:minWidth="50.0dip"
                android:minHeight="50.0dip"
                app:srcCompat="@drawable/ic_qq_login" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

